# LIDL-Engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  compileCSharpToLua.bat  engineAPI.lua  test.lua
C#Scripts/: test.cs
Editor/: CMakeLists.txt  editor_settings.example.yaml  editor_settings.yaml
Editor/Templates/: ComponentTemplate.cs  launcherTemplate.lua
Editor/src/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorSettings.hpp  EventListener.hpp  EventManager.cpp  EventManager.hpp  Project.hpp  main.cpp
Editor/src/AssetExplorer/: AssetManager.cpp  AssetManager.hpp  AssetNode.hpp
Editor/src/GUI/: ConsoleGUI.cpp  ConsoleGUI.hpp  EditorGUI.cpp  EditorGUI.hpp  GUIHelper.cpp  GUIHelper.hpp  MainMenuGUI.cpp  MainMenuGUI.hpp
Editor/src/Serializer/: EditorSerializer.cpp  EditorSerializer.hpp
Engine/: CMakeLists.txt
Engine/src/: Engine.hpp  main.cpp
Engine/src/Audio/: AudioManager.cpp  AudioManager.hpp
Engine/src/Components/: BoxColliderComponent.cpp  BoxColliderComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  ColliderComponent.cpp  ColliderComponent.hpp  Component.hpp  ComponentFactory.cpp  ComponentFactory.hpp  ControllableComponent.cpp  ControllableComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  MultiplayerComponent.cpp  MultiplayerComponent.hpp  PhysicsComponent.hpp  PointLightComponent.hpp  ScriptableComponent.cpp  ScriptableComponent.hpp  SphereColliderComponent.cpp  SphereColliderComponent.hpp  SpotLightComponent.hpp
Engine/src/Core/: AudioManager.hpp  Bootstrap.hpp  BoundingBox.cpp  BoundingBox.hpp  Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  Game.cpp  Game.hpp  GameConfig.hpp  GameObject.cpp  GameObject.hpp  InputEvent.hpp  InputFramework.cpp  InputFramework.hpp  InputListener.hpp  InputSystem.hpp  Logger.cpp  Logger.hpp  Material.hpp  ResourceManager.cpp  ResourceManager.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Uuid.cpp  Window.hpp
Engine/src/Events/: EventListener.hpp  EventManager.cpp  EventManager.hpp
Engine/src/Input/: ActionMap.cpp  ActionMap.hpp  InputEvent.cpp  InputEvent.hpp  InputFramework.cpp  InputFramework.hpp  InputListener.cpp  InputListener.hpp  InputSystem.cpp  InputSystem.hpp
Engine/src/Multiplayer/: Helpers.cs
Engine/src/Multiplayer/Client/: Client.cpp  Client.hpp  GameClient.cs
Engine/src/Multiplayer/Server/: GameServer.cs
Engine/src/MultiplayerClient/: Client.cpp  Client.hpp
Engine/src/Physics/: GamePhysics.cpp  GamePhysics.hpp  GamePhysicsSettings.hpp
Engine/src/Renderer/: Buffer.cpp  GraphicsAPI.hpp  Renderer.cpp  Renderer.hpp  RendererSettings.hpp  Shader.cpp
Engine/src/Renderer/Console/: Display.hpp  DisplayTerminal.cpp  DisplayTerminal.hpp
Engine/src/Renderer/OpenGL/: OpenGLBuffer.hpp  OpenGLGraphicsAPI.cpp  OpenGLGraphicsAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp
Engine/src/SDL/: SDLWindow.cpp  SDLWindow.hpp
Engine/src/ScriptEngine/: ScriptEngine.cpp  ScriptEngine.hpp
Engine/src/ScriptingAPI/: ComponentTemplate.cs  GameObject.cs  launcher.lua  test.cs
Engine/src/ScriptingAPI/C#ToLuaCompiler/: CSharp.lua.Launcher.deps.json
Engine/src/ScriptingAPI/Compiled/: GameObject.lua  manifest.lua  test.lua
Engine/src/Serializer/: GameSerializer.cpp  GameSerializer.hpp  Serializable.hpp
Engine/src/Shaders/: simple.frag  simple.vert
Engine/src/UI/: GUIHelper.cpp  GUIHelper.hpp
Engine/src/Utils/: ColliderChecks.cpp  ColliderChecks.hpp  Utils.cpp  Utils.hpp
Games/FPSGame/: CMakeLists.txt  FPSGame.cpp  FPSGame.hpp  FPSGameState.yaml
Games/FPSGame/Scripts/: Enemy.cs  EnemyManager.cs  Player.cs  TestComponent.cs  Weapon.cs  launcher.lua
Games/MultiplayerGame/: CMakeLists.txt  MultiplayerGame.cpp  MultiplayerGame.hpp  MultiplayerGameState.example.yaml
Games/Snake3D/: CMakeLists.txt  Snake3D.cpp  Snake3D.hpp  Snake3DState.example.yaml
Games/SnakeGame/: CMakeLists.txt  SnakeGame.cpp  SnakeGame.hpp
Games/TestGame/: CMakeLists.txt  TestGame.cpp  TestGame.hpp  TestGameConfig.yaml  TestGameState.example.yaml  TestGameState.yaml
Games/TestGame/Scripts/: DemoPlayer.cs  TestComponent.cs  launcher.lua  test.cs  testComponent2.cs
Games/TestGame2/: CMakeLists.txt  TestGame2.cpp  TestGame2.hpp  TestGame2State.example.yaml  TestGame2State.yaml
Games/TestGame2/Scripts/: TestComponent.cs
editor/: AssetManager.cpp  AssetManager.hpp  AssetNode.hpp  CMakeLists.txt  Editor.cpp  EditorGUI.cpp  EditorGUI.hpp  EditorSettings.hpp  MainMenuGUI.cpp  Project.hpp  main.cpp
editor/GUI/: EditorGUI.hpp
editor/src/: AssetManager.hpp  AssetNode.hpp  EditorSettings.hpp  main.cpp
editor/src/GUI/: MainMenuGUI.cpp
engine/: AssetManager.cpp  AssetManager.hpp  AssetNode.hpp  AudioManager.cpp  AudioManager.hpp  Bootstrap.cpp  Bootstrap.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Component.hpp  Cube.cpp  Cube.hpp  Display.hpp  DisplayTerminal.cpp  DisplayTerminal.hpp  Editor.cpp  Editor.hpp  EditorGUI.cpp  EditorGUI.hpp  EditorSerializer.cpp  EditorSerializer.hpp  Engine.hpp  GUIHelper.cpp  GUIHelper.hpp  Game.cpp  Game.hpp  GameConfig.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GamePhysics.cpp  GamePhysics.hpp  GameSerializer.cpp  GameSerializer.hpp  GraphicsAPI.hpp  InputEvent.cpp  (+60 more)
engine/Components/: MeshComponent.cpp  MeshComponent.hpp
engine/Core/: Uuid.hpp
engine/Renderer/: Buffer.cpp  Renderer.cpp  Renderer.hpp
engine/Renderer/Console/: DisplayTerminal.hpp
engine/Renderer/OpenGL/: OpenGLBuffer.hpp  OpenGLGraphicsAPI.hpp  OpenGLShader.cpp  OpenGLTexture.cpp
engine/SDL/: SDLWindow.cpp
engine/Serializer/: GameSerializer.cpp  GameSerializer.hpp
engine/Utils/: Utils.cpp
engine/shaders/: simple.frag  simple.vert
engine/src/Audio/: AudioManager.cpp  AudioManager.hpp
engine/src/Core/: Game.hpp  InputListener.hpp  Transform.hpp
engine/src/Physics/: GamePhysics.cpp
engine/src/Renderer/: Buffer.hpp  Shader.cpp
engine/src/SDL/: SDLWindow.hpp
engine/src/Utils/: Utils.hpp
game/: CMakeLists.txt  TestGame.cpp  TestGame.hpp  main.cpp
(+49 files in other folders)
